--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Forecast App</title>
+    <title>Pronóstico del tiempo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Weather Forecast</h1>
-        <input type="text" id="locationInput" placeholder="Ingrese una ubicación">
-        <button id="getForecastBtn">Obtener Pronóstico</button>
-        <div id="weatherInfo">
-            <p><strong>Ubicación:</strong> <span id="location"></span></p>
-            <p><strong>Temperatura:</strong> <span id="temperature"></span>°C</p>
-            <p><strong>Descripción:</strong> <span id="description"></span></p>
-            <p><strong>Humedad:</strong> <span id="humidity"></span>%</p>
-            <p><strong>Velocidad del Viento:</strong> <span id="windSpeed"></span> m/s</p>
+        <h1>Pronóstico del tiempo</h1>
+        <input type="text" id="ubicacionInput" placeholder="Ingrese una ubicación">
+        <button id="obtenerClimaBtn">Obtener Pronóstico</button>
+        <div id="climaInfo">
+            <p><strong>Ubicación:</strong> <span id="ubicacion"></span></p>
+            <p><strong>Temperatura:</strong> <span id="temperatura"></span>°C</p>
+            <p><strong>Descripción:</strong> <span id="descripcion"></span></p>
+            <p><strong>Humedad:</strong> <span id="humedad"></span>%</p>
+            <p><strong>Velocidad del Viento:</strong> <span id="velocidadViento"></span> m/s</p>
         </div>
-        <div id="errorMessage" class="error-message"></div>
+        <div id="error" class="error-message"></div>
     </div>
     <script src="script.js"></script>
 </body>
